@@ -2,6 +2,7 @@
 Bug #26198 (strtotime handling of "M Y" and "Y M" format)
 --FILE--
 <?php
+	putenv("TZ=");
 	echo gmdate("F Y (Y-m-d H:i:s T)\n", strtotime("Oct 2001"));
 	echo gmdate("M Y (Y-m-d H:i:s T)\n", strtotime("2001 Oct"));
 ?>
